# TestedPackages-NoIssues

QF/: MD5  (+5 more)
glmBfp/: ChangeLog  DESCRIPTION  MD5  NAMESPACE  TODO  cleanup  config.status  configure  configure.ac
glmBfp/R/: GPrior-classes.R  GlmBayesMfp-methods.R  GlmBayesMfpSamples-class.R  GlmBayesMfpSamples-methods.R  McmcOptions-class.R  McmcOptions-methods.R  RcppExports.R  computeModels.R  constructNewdataMatrix.R  coxTBF.R  evalZdensity.R  formula.R  fpScale.R  fpTrans.R  getDesignMatrix.R  getFamily.R  getFpTransforms.R  getLogGPrior.R  getLogMargLikEstimate.R  getMarginalZ.R  getModelCoefs.R  glmBayesMfp.R  glmBfp-package.R  helpers.R  hpds.R  inclusionProbs.R  optimize.R  plotCurveEstimate.R  posteriors.R  predictCoxTBF.R  sampleBma.R  sampleGlm.R  testCox.R  uncenteredDesignMatrix.R  writeFormula.R
glmBfp/inst/: CITATION
glmBfp/inst/doc/: examples.R  (+1 more)
glmBfp/man/: CustomGPrior-class.Rd  CustomGPrior.Rd  Extract.GlmBayesMfp.Rd  GPrior-class.Rd  GlmBayesMfpSamples-class.Rd  GlmBayesMfpSamples-subsetting.Rd  HypergPrior-class.Rd  HypergPrior-initialize.Rd  HypergPrior.Rd  IncInvGammaGPrior-class.Rd  IncInvGammaGPrior-initialize.Rd  IncInvGammaGPrior.Rd  InvGammaGPrior-class.Rd  InvGammaGPrior-initialize.Rd  InvGammaGPrior.Rd  McmcOptions-class.Rd  McmcOptions.Rd  as.data.frame.GlmBayesMfp.Rd  boxTidwell.Rd  computeModels.Rd  constructNewdataMatrix.Rd  convert2Mcmc.Rd  coxTBF.Rd  cppBfgs.Rd  cppOptimize.Rd  empiricalHpd.Rd  evalZdensity.Rd  formula.Rd  fpScale.Rd  fpTrans.Rd  getDesignMatrix.Rd  getFamily.Rd  getFpTransforms.Rd  getGenerator.Rd  getLogGPrior.Rd  getLogMargLikEstimate.Rd  getMarginalZ.Rd  getModelCoefs.Rd  getUncenteredDesignMatrix.Rd  glmBayesMfp.Rd  (+17 more)
glmBfp/src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  bfgs.cpp  bfgs.h  combinatorics.cpp  combinatorics.h  coxfit.cpp  coxfit.h  dataStructure.cpp  dataStructure.h  design.cpp  design.h  distributions.cpp  distributions.h  evalZdensity.cpp  fpUcHandling.cpp  fpUcHandling.h  functionWraps.cpp  functionWraps.h  glmBayesMfp.cpp  gpriors.cpp  gpriors.h  iwls.cpp  iwls.h  linalgInterface.cpp  linalgInterface.h  links.h  optimize.cpp  optimize.h  predBMA.cpp  rcppExport.h  sampleGlm.cpp  sum.h  types.h  zdensity.cpp  zdensity.h
glmBfp/tests/: optimization.R
glmBfp/vignettes/: examples.bib
(+1358042 files in other folders)
